Enhance product and testimonials sections with Tailwind CSS styling. Added new utility classes for typography and layout adjustments. Updated testimonials section to include dynamic content and improved SVG handling. Removed related products section from product template for a cleaner layout.

--- a/assets/base.css
+++ b/assets/base.css
@@ -2564,6 +2564,12 @@ input[type='checkbox'] {
   height: 24px;
 }
 
+#testimonials-svg-container > svg {
+  width: 86px;
+  height: 65px;
+  aspect-ratio: 86/65;
+}
+
 .header__icon::after {
   content: none;
 }
