--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1364,6 +1364,9 @@ a.product__text {
 .product-media-container .product__modal-opener {
   display: block;
   position: relative;
+  border-radius: 10px;
+  background: #F6F6F7;
+
 }
 
 @media screen and (min-width: 750px) {
