--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1023,7 +1023,9 @@ a.product__text {
   padding: 0;
   color: rgb(var(--color-foreground));
   cursor: pointer;
-  background-color: transparent;
+  background-color: #F6F6F7;
+  border-radius: 10px;
+  border: none;
 }
 
 .thumbnail:hover {
