Enhance custom add-to-cart functionality by adding validation for TCGplayer seller account and terms acceptance. Update button styling to reflect disabled state and improve user feedback. Adjust footer and testimonials sections for better typography and layout consistency.

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -63,6 +63,12 @@
 .tw-w-full {
     width: 100%
 }
+.tw-cursor-not-allowed {
+    cursor: not-allowed
+}
+.tw-cursor-pointer {
+    cursor: pointer
+}
 .tw-list-none {
     list-style-type: none
 }
@@ -114,20 +120,17 @@
     --tw-bg-opacity: 1;
     background-color: rgb(238 239 240 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-\[gainsboro\] {
+.tw-bg-\[\#F7FAFF\] {
     --tw-bg-opacity: 1;
-    background-color: rgb(220 220 220 / var(--tw-bg-opacity, 1))
+    background-color: rgb(247 250 255 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-\[\#\#F7FAFF\] {
-    background-color: ##F7FAFF
-}
-.tw-bg-\[\#F7FAFF\] {
+.tw-bg-gray-400 {
     --tw-bg-opacity: 1;
-    background-color: rgb(247 250 255 / var(--tw-bg-opacity, 1))
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1))
 }
 .\!tw-p-0 {
     padding: 0px !important
@@ -164,8 +167,11 @@
 .\!tw-pt-0 {
     padding-top: 0px !important
 }
-.tw-text-left {
-    text-align: left
+.tw-text-center {
+    text-align: center
+}
+.tw-font-sans {
+    font-family: Inter, sans-serif
 }
 .\!tw-text-\[14px\] {
     font-size: 14px !important
@@ -176,11 +182,8 @@
 .\!tw-text-xs {
     font-size: 12.5px !important
 }
-.tw-text-base {
-    font-size: 16px
-}
-.tw-text-lg {
-    font-size: 25px
+.tw-text-\[15px\] {
+    font-size: 15px
 }
 .tw-text-\[22px\] {
     font-size: 22px
@@ -188,11 +191,14 @@
 .tw-text-\[34px\] {
     font-size: 34px
 }
-.tw-text-\[16px\] {
+.tw-text-base {
     font-size: 16px
 }
-.tw-text-\[15px\] {
-    font-size: 15px
+.tw-text-lg {
+    font-size: 25px
+}
+.tw-text-xs {
+    font-size: 12.5px
 }
 .tw-font-\[400\] {
     font-weight: 400
@@ -203,38 +209,46 @@
 .tw-font-bold {
     font-weight: 700
 }
-.tw-leading-\[155\%\] {
-    line-height: 155%
-}
-.tw-leading-\[135\%\] {
-    line-height: 135%
+.tw-font-normal {
+    font-weight: 400
 }
 .tw-leading-\[125\%\] {
     line-height: 125%
 }
-.tw-leading-\[150\%\] {
-    line-height: 150%
+.tw-leading-\[135\%\] {
+    line-height: 135%
+}
+.tw-leading-\[155\%\] {
+    line-height: 155%
 }
 .\!tw-tracking-\[0\.14px\] {
     letter-spacing: 0.14px !important
 }
-.tw-tracking-\[0\.16px\] {
-    letter-spacing: 0.16px
-}
-.tw-tracking-\[150\%\] {
-    letter-spacing: 150%
-}
-.tw-tracking-\[0\.5px\] {
-    letter-spacing: 0.5px
-}
-.tw-tracking-\[0\.44px\] {
-    letter-spacing: 0.44px
+.tw-tracking-\[-0\.15px\] {
+    letter-spacing: -0.15px
 }
 .tw-tracking-\[-0\.34px\] {
     letter-spacing: -0.34px
 }
-.tw-tracking-\[-0\.15px\] {
-    letter-spacing: -0.15px
+.tw-tracking-\[0\.16px\] {
+    letter-spacing: 0.16px
+}
+.tw-tracking-\[0\.44px\] {
+    letter-spacing: 0.44px
+}
+.tw-tracking-\[0\.5px\] {
+    letter-spacing: 0.5px
+}
+.tw-tracking-\[150\%\] {
+    letter-spacing: 150%
+}
+.tw-text-\[\#000\] {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity, 1))
+}
+.tw-text-\[\#767676\] {
+    --tw-text-opacity: 1;
+    color: rgb(118 118 118 / var(--tw-text-opacity, 1))
 }
 .tw-text-black {
     --tw-text-opacity: 1;
@@ -248,14 +262,6 @@
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
-.tw-text-\[\#000\] {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity, 1))
-}
-.tw-text-\[\#767676\] {
-    --tw-text-opacity: 1;
-    color: rgb(118 118 118 / var(--tw-text-opacity, 1))
-}
 .hover\:tw-bg-black:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
@@ -263,6 +269,14 @@
 .hover\:tw-bg-gray-300:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1))
+}
+.disabled\:tw-bg-gray-400:disabled {
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1))
+}
+.disabled\:tw-text-black:disabled {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity, 1))
 }
 @media (min-width: 640px) {
     .sm\:\!tw-px-\[15px\] {
