--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -182,7 +182,7 @@
               </div>
             {%- endif -%}
           </div>
-          <div class="tw-col-span-4 tw-px-auto tw-text-left md:tw-text-center">
+          <div class="tw-col-span-4 tw-px-auto tw-text-center tw-text-black tw-font-sans tw-text-xs tw-font-normal tw-leading-[125%]">
             <br class="tw-hidden md:tw-block"/>
             <ul class="tw-list-none tw-p-0 tw-m-0 tw-flex tw-flex-col tw-gap-[1.5rem] md:tw-gap-[2rem] md:tw-mt-5">
               <li class="!tw-text-xs !tw-tracking-[0.14px]">All original content herein is Copyright © TCGplayer, Inc. TCGplayer.com is a trademark of TCGplayer, Inc.</li>
