--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -14,8 +14,8 @@
     </div>
 
     <div>
-        <p class="tw-my-0 tw-font-bold tw-text-[22px] tw-text-[#000] tw-leading-[135%] tw-tracking-[0.44px]">Kris Chery</p>
-        <p class="tw-my-0 tw-text-[22px] tw-text-[#000] tw-leading-[135%] tw-tracking-[0.44px]">2150 Design</p>
+        <p class="tw-my-0 tw-font-bold tw-text-[22px] tw-text-[#000] tw-leading-[135%] tw-tracking-[0.44px]">Michael E.</p>
+        <p class="tw-my-0 tw-text-[22px] tw-text-[#000] tw-leading-[135%] tw-tracking-[0.44px]">Teal Games</p>
     </div>
   </div>
 </div>
