--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -157,7 +157,10 @@
 
 @media screen and (min-width: 990px) {
   .footer-block__heading {
-    font-size: calc(var(--font-heading-scale) * 1.8rem);
+    font-size: 16.532px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 125%; /* 20.666px */
   }
 }
 
