Enhance custom add-to-cart button functionality by adding quantity selection and syncing checkbox states on mount. Update form submission to handle multiple items with unique serial numbers based on selected quantity. Improve user interface with new Tailwind CSS utility classes for better styling and responsiveness.

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -39,11 +39,17 @@
 .tw-mt-\[4rem\] {
     margin-top: 4rem
 }
+.tw-mt-4 {
+    margin-top: 1rem
+}
 .tw-block {
     display: block
 }
 .tw-flex {
     display: flex
+}
+.tw-inline-flex {
+    display: inline-flex
 }
 .tw-grid {
     display: grid
@@ -57,17 +63,40 @@
 .tw-h-\[24px\] {
     height: 24px
 }
+.tw-h-5 {
+    height: 1.25rem
+}
 .tw-w-\[24px\] {
     width: 24px
 }
 .tw-w-full {
     width: 100%
 }
+.tw-w-5 {
+    width: 1.25rem
+}
+.tw-w-16 {
+    width: 4rem
+}
+.tw-min-w-\[120px\] {
+    min-width: 120px
+}
+@keyframes tw-spin {
+    to {
+        transform: rotate(360deg)
+    }
+}
+.tw-animate-spin {
+    animation: tw-spin 1s linear infinite
+}
 .tw-cursor-not-allowed {
     cursor: not-allowed
 }
 .tw-cursor-pointer {
     cursor: pointer
+}
+.tw-cursor-wait {
+    cursor: wait
 }
 .tw-list-none {
     list-style-type: none
@@ -96,17 +125,42 @@
 .tw-gap-\[1\.5rem\] {
     gap: 1.5rem
 }
+.tw-gap-3 {
+    gap: 0.75rem
+}
+.tw-overflow-hidden {
+    overflow: hidden
+}
 .tw-rounded-\[8px\] {
     border-radius: 8px
 }
 .tw-rounded-full {
     border-radius: 9999px
 }
+.tw-rounded {
+    border-radius: 0.25rem
+}
+.tw-border {
+    border-width: 1px
+}
+.tw-border-0 {
+    border-width: 0px
+}
 .\!tw-border-t-0 {
     border-top-width: 0px !important
 }
+.tw-border-l {
+    border-left-width: 1px
+}
+.tw-border-r {
+    border-right-width: 1px
+}
 .tw-border-none {
     border-style: none
+}
+.tw-border-gray-300 {
+    --tw-border-opacity: 1;
+    border-color: rgb(209 213 219 / var(--tw-border-opacity, 1))
 }
 .tw-bg-\[\#0835DB\] {
     --tw-bg-opacity: 1;
@@ -131,6 +185,10 @@
 .tw-bg-gray-400 {
     --tw-bg-opacity: 1;
     background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1))
+}
+.tw-bg-gray-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
 }
 .\!tw-p-0 {
     padding: 0px !important
@@ -160,6 +218,10 @@
 .tw-py-\[8rem\] {
     padding-top: 8rem;
     padding-bottom: 8rem
+}
+.tw-px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem
 }
 .\!tw-pb-0 {
     padding-bottom: 0px !important
@@ -262,6 +324,39 @@
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1))
 }
+.tw-opacity-25 {
+    opacity: 0.25
+}
+.tw-opacity-75 {
+    opacity: 0.75
+}
+.tw-outline-none {
+    outline: 2px solid transparent;
+    outline-offset: 2px
+}
+.tw-outline {
+    outline-style: solid
+}
+.tw-outline-2 {
+    outline-width: 2px
+}
+.tw-outline-red-500 {
+    outline-color: #ef4444
+}
+.tw-ring-2 {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
+}
+.tw-ring-red-500 {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity, 1))
+}
+.tw-transition-colors {
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms
+}
 .hover\:tw-bg-black:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
@@ -270,13 +365,27 @@
     --tw-bg-opacity: 1;
     background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1))
 }
+.hover\:tw-bg-gray-200:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
+}
+.disabled\:tw-cursor-not-allowed:disabled {
+    cursor: not-allowed
+}
 .disabled\:tw-bg-gray-400:disabled {
     --tw-bg-opacity: 1;
     background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1))
 }
+.disabled\:tw-bg-gray-50:disabled {
+    --tw-bg-opacity: 1;
+    background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1))
+}
 .disabled\:tw-text-black:disabled {
     --tw-text-opacity: 1;
     color: rgb(0 0 0 / var(--tw-text-opacity, 1))
+}
+.disabled\:tw-opacity-50:disabled {
+    opacity: 0.5
 }
 @media (min-width: 640px) {
     .sm\:\!tw-px-\[15px\] {
