--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -24,14 +24,26 @@
 .\!tw-mb-2 {
     margin-bottom: 0.5rem !important
 }
+.\!tw-mt-\[0\.8rem\] {
+    margin-top: 0.8rem !important
+}
+.\!tw-mt-\[1\.2rem\] {
+    margin-top: 1.2rem !important
+}
 .\!tw-mt-\[3rem\] {
     margin-top: 3rem !important
 }
 .tw-mb-2 {
     margin-bottom: 0.5rem
 }
+.tw-mb-3 {
+    margin-bottom: 0.75rem
+}
 .tw-mt-2 {
     margin-top: 0.5rem
+}
+.tw-mt-4 {
+    margin-top: 1rem
 }
 .tw-mt-5 {
     margin-top: 1.25rem
@@ -39,17 +51,11 @@
 .tw-mt-\[4rem\] {
     margin-top: 4rem
 }
-.tw-mt-4 {
-    margin-top: 1rem
-}
 .tw-block {
     display: block
 }
 .tw-flex {
     display: flex
-}
-.tw-inline-flex {
-    display: inline-flex
 }
 .tw-grid {
     display: grid
@@ -60,23 +66,23 @@
 .tw-hidden {
     display: none
 }
+.tw-h-5 {
+    height: 1.25rem
+}
 .tw-h-\[24px\] {
     height: 24px
 }
-.tw-h-5 {
-    height: 1.25rem
+.tw-w-16 {
+    width: 4rem
+}
+.tw-w-5 {
+    width: 1.25rem
 }
 .tw-w-\[24px\] {
     width: 24px
 }
 .tw-w-full {
     width: 100%
-}
-.tw-w-5 {
-    width: 1.25rem
-}
-.tw-w-16 {
-    width: 4rem
 }
 .tw-min-w-\[120px\] {
     min-width: 120px
@@ -119,14 +125,14 @@
 .tw-gap-2 {
     gap: 0.5rem
 }
+.tw-gap-3 {
+    gap: 0.75rem
+}
 .tw-gap-4 {
     gap: 1rem
 }
 .tw-gap-\[1\.5rem\] {
     gap: 1.5rem
-}
-.tw-gap-3 {
-    gap: 0.75rem
 }
 .tw-overflow-hidden {
     overflow: hidden
@@ -137,9 +143,6 @@
 .tw-rounded-full {
     border-radius: 9999px
 }
-.tw-rounded {
-    border-radius: 0.25rem
-}
 .tw-border {
     border-width: 1px
 }
@@ -148,12 +151,6 @@
 }
 .\!tw-border-t-0 {
     border-top-width: 0px !important
-}
-.tw-border-l {
-    border-left-width: 1px
-}
-.tw-border-r {
-    border-right-width: 1px
 }
 .tw-border-none {
     border-style: none
@@ -178,17 +175,17 @@
     --tw-bg-opacity: 1;
     background-color: rgb(247 250 255 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-white {
+.tw-bg-gray-100 {
     --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
 }
 .tw-bg-gray-400 {
     --tw-bg-opacity: 1;
     background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1))
 }
-.tw-bg-gray-100 {
+.tw-bg-white {
     --tw-bg-opacity: 1;
-    background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1))
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1))
 }
 .\!tw-p-0 {
     padding: 0px !important
@@ -199,9 +196,9 @@
 .tw-p-3 {
     padding: 0.75rem
 }
-.tw-px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem
+.tw-px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem
 }
 .tw-px-\[16px\] {
     padding-left: 16px;
@@ -219,15 +216,14 @@
     padding-top: 8rem;
     padding-bottom: 8rem
 }
-.tw-px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem
-}
 .\!tw-pb-0 {
     padding-bottom: 0px !important
 }
 .\!tw-pt-0 {
     padding-top: 0px !important
+}
+.tw-pt-\[5px\] {
+    padding-top: 5px
 }
 .tw-text-center {
     text-align: center
@@ -238,6 +234,9 @@
 .\!tw-text-\[14px\] {
     font-size: 14px !important
 }
+.\!tw-text-\[18px\] {
+    font-size: 18px !important
+}
 .\!tw-text-base {
     font-size: 16px !important
 }
@@ -246,6 +245,9 @@
 }
 .tw-text-\[15px\] {
     font-size: 15px
+}
+.tw-text-\[20px\] {
+    font-size: 20px
 }
 .tw-text-\[22px\] {
     font-size: 22px
@@ -334,24 +336,6 @@
     outline: 2px solid transparent;
     outline-offset: 2px
 }
-.tw-outline {
-    outline-style: solid
-}
-.tw-outline-2 {
-    outline-width: 2px
-}
-.tw-outline-red-500 {
-    outline-color: #ef4444
-}
-.tw-ring-2 {
-    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000)
-}
-.tw-ring-red-500 {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity, 1))
-}
 .tw-transition-colors {
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -361,28 +345,20 @@
     --tw-bg-opacity: 1;
     background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1))
 }
-.hover\:tw-bg-gray-300:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1))
-}
 .hover\:tw-bg-gray-200:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1))
 }
+.hover\:tw-bg-gray-300:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1))
+}
 .disabled\:tw-cursor-not-allowed:disabled {
     cursor: not-allowed
-}
-.disabled\:tw-bg-gray-400:disabled {
-    --tw-bg-opacity: 1;
-    background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1))
 }
 .disabled\:tw-bg-gray-50:disabled {
     --tw-bg-opacity: 1;
     background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1))
-}
-.disabled\:tw-text-black:disabled {
-    --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity, 1))
 }
 .disabled\:tw-opacity-50:disabled {
     opacity: 0.5
